--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -99,10 +99,10 @@
 
   <!-- ======= Footer ======= -->
 
-  <footer id="footer">
+  <footer id="footer"  style="background-image:url('<%=asset_path "section_bg4.png"%>')">
 
-    <div class="container">
-      <div class="copyright">
+    <div class="container my-4 py-4">
+      <div class="copyright mt-4">
         Tous droits réservés – <strong>SCCV VIBES RESORT</strong> – 790 452 452 RCS Béziers - Une opération commercialisée par le <a href="https://www.angelotti.fr/">Groupe Immobilier ANGELOTTI</a>
       </div>
       <div class="credits">
